# pauline

./: README.md  main.py  pyproject.toml  server.py
pauline/: app.py  mcp.py
static/: index.html
