[project]
name = "pauline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "mcp[cli]>=1.15.0",
    "pydantic-ai>=1.0.12",
    "sqlglot>=27.20.0",
]

[dependency-groups]
def = [
    "pyright",
    "ruff"
]
